--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@
 language: cpp
 
 before_install:
+ - if [[ $CTP = yes ]]; then sudo add-apt-repository -y ppa:boost-latest/ppa; fi #newer boost for libboost_timer
  - sudo apt-get update
  - sudo apt-get install cmake libfftw3-dev libgsl0-dev txt2tags libboost-program-options-dev libboost-filesystem-dev libboost-system-dev libexpat1-dev libsqlite3-dev pkg-config mercurial
  - if [[ $MAN ]]; then sudo apt-get install pgf texlive-fonts-recommended texlive-latex-extra doxygen graphviz; fi
@@ -13,38 +14,10 @@ before_install:
  - if [[ $TEST = *simplex* ]]; then sudo apt-get install gnuplot-nox; fi
  - if [[ $TEST = *realtime ]]; then sudo apt-get install gnuplot-nox; fi
  - if [[ $GROMACS != yes ]]; then sudo apt-get install gromacs-dev; fi
+ - if [[ $CTP = yes ]]; then sudo apt-get install libboost1.48-all-dev; fi
 
 env: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-  - WERROR=yes J=4 #J>4 triggers an internal compiler in travis' g++
-  - J=1
-  - BDIR=build J=4
-  - BDIR=build J=1
   - MAN=yes J=4
-  - MINIMAL=yes J=4
-  - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_bonded J=4
-  - CSG_MDRUN_STEPS=500 TEST=hexane/ibi J=4
-  - CSG_MDRUN_STEPS=500 TEST=methanol/ibi J=4
-  - CSG_MDRUN_STEPS=10000 TEST=methanol/imc J=4
-  - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.938/re J=4
-  - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.938/simplex J=4
-  - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.062/re J=4
-  - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.062/simplex J=4
-  - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.5/re J=4
-  - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.5/simplex J=4
-  - CSG_MDRUN_STEPS=500 TEST=propane/ibi J=4
-  - CSG_MDRUN_STEPS=10000 TEST=propane/imc J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/cma/density J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/cma/simple J=4 GROMACS=yes
-  - CSG_MDRUN_STEPS=500 TEST=spce/ibi J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/ibi_pressure J=4
-  - CSG_MDRUN_STEPS=10000 TEST=spce/imc J=4
-  - CSG_MDRUN_STEPS=10000 TEST=spce/realtime J=4
-  - CSG_MDRUN_STEPS=5000 TEST=spce/re J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/simplex/density J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/simplex/pressure J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/simplex/simple J=4
-  - CSG_MDRUN_STEPS=500 TEST=spce/tf J=4 GROMACS=yes
-  - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
 
 matrix:
   exclude:
@@ -61,13 +34,10 @@ before_script:
 script:
   - PYTHONPATH="$PWD" ./build.sh -Wdu --prefix $PWD ${MAN:+--devdoc}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} ${MINIMAL:+--minimal}
-    ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} 
+    ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall}
     tools ${GROMACS:+gromacs} csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
+    ${CTP:+kmc moo ctp}
 
 compiler:
   - clang
   - gcc
-
-notifications:
-  email:
-    - junghans@votca.org #https://github.com/travis-ci/travis-ci/issues/2513
