--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ env: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
   - CSG_MDRUN_STEPS=500 TEST=spce/simplex/simple J=4
   - CSG_MDRUN_STEPS=500 TEST=spce/tf J=4 GROMACS=yes
   - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
+  - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
 
 matrix:
   exclude:
