--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,60 @@
+#the original source of this file can be found in tools repository change it ther
+# changes in tools|csg tiggered a full rebuild
+# changes in csgapps|csg-manual|csg-tutorials only trigger tools+csg+ifself
+
 language: cpp
 
-before_install:
- - if [[ $CTP = yes ]]; then sudo add-apt-repository -y ppa:boost-latest/ppa; fi #newer boost for libboost_timer
- - sudo apt-get update
- - sudo apt-get install cmake libfftw3-dev libgsl0-dev txt2tags libboost-program-options-dev libboost-filesystem-dev libboost-system-dev libexpat1-dev libsqlite3-dev pkg-config mercurial
- - if [[ $MAN ]]; then sudo apt-get install pgf texlive-fonts-recommended texlive-latex-extra doxygen graphviz; fi
- - if [[ $TEST = *cma* ]]; then sudo apt-get install python-numpy gnuplot-nox; fi
- - if [[ $TEST = *imc ]]; then sudo apt-get install octave; fi
- - if [[ $TEST = *simplex* ]]; then sudo apt-get install gnuplot-nox; fi
- - if [[ $TEST = *realtime ]]; then sudo apt-get install gnuplot-nox; fi
- - if [[ $GROMACS != yes ]]; then sudo apt-get install gromacs-dev; fi
- - if [[ $CTP = yes ]]; then sudo apt-get install libboost1.48-all-dev; fi
+sudo: false
 
-env: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-  - CTP=yes WERROR=yes J=4 #J>4 triggers an internal compiler in travis' g++
-  - CTP=yes WALL=yes J=4
+addons:
+  apt:
+    sources: boost-latest 
+    packages:
+      - cmake
+      - ccache
+      - libfftw3-dev
+      - libgsl0-dev
+      - txt2tags
+      - libboost1.55-all-dev
+      - libexpat1-dev
+      - libsqlite3-dev
+      - pkg-config
+      - pgf
+      - texlive-fonts-recommended
+      - texlive-latex-extra
+      - doxygen
+      - graphviz
+      - python-numpy
+      - gnuplot-nox
+      - octave
+      - gromacs-dev
+
+env:
+  global:
+    - GMX_MAX_THREADS=8
+    - CCACHE_CPP2=yes
+  matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
+    - CTP=yes WERROR=yes J=4
+    - CTP=yes WALL=yes J=4
 
 before_script:
-  - rm -vrf * .git
   - wget https://raw.githubusercontent.com/votca/buildutil/master/build.sh && chmod 755 build.sh
-  - if [[ $TEST = *cma* ]]; then wget http://www.lri.fr/~hansen/cma.py; fi #we set PYTHONPATH="$PWD" below
+  - mkdir -p "$HOME/votca/src" "$HOME/votca/share/votca/scripts/inverse" "$HOME/bin"
+  - wget -O "$HOME/votca/share/votca/scripts/inverse/cma.py" http://www.lri.fr/~hansen/cma.py
+  - ln -s /usr/bin/ccache "$HOME/bin/clang++"
+  - ln -s /usr/bin/ccache "$HOME/bin/clang"
 
 script:
-  - PYTHONPATH="$PWD" ./build.sh -Wdu --prefix $PWD ${MAN:+--devdoc}
+  - PATH="$HOME/bin:/usr/lib/ccache:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} ${MINIMAL:+--minimal}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall}
+    --directory "$HOME/votca/src" --no-clean --depth 1 --gmx-release 4.6.7
     tools ${GROMACS:+gromacs} csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
-    ${CTP:+kmc moo ctp}
+    ${CTP:+kmc moo ctp} ${GROMACS:+-DGMX_USE_RDTSCP=OFF} ${GROMACS:+-DGROMACS_PKG_OVERWRITE=libgmx}
+
+cache:
+  directories:
+    - $HOME/.ccache
 
 compiler:
   - clang
