--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,16 @@ endforeach(_blib)
 find_package(VOTCA_TOOLS REQUIRED)
 include_directories(${VOTCA_TOOLS_INCLUDE_DIRS})
 
+option(WITH_GMX "Build gromacs reader/writer, disabling leads to reduced functionality!" ON)
+if (WITH_GMX)
+  foreach(LIBGMX libgmx_d libgmx libgromacs_d libgromacs)
+    find_package(GROMACS COMPONENTS "${LIBGMX}")
+    if (GROMACS_FOUND)
+      break()
+    endif(GROMACS_FOUND)
+  endforeach(LIBGMX)
+endif(WITH_GMX) 
+
 ########################################################################
 # Basic system tests (standard libraries, headers, functions, types)   #
 ########################################################################
