--- a/share/xml/csg_defaults.xml.in
+++ b/share/xml/csg_defaults.xml.in
@@ -123,7 +123,7 @@
 	    <DESC> trash the given number of frames at the beginning of trajectory (max of this and first_frame is used)</DESC>
       </first_frame>
       <g_energy>
-	      <bin>g_energy
+	      <bin>@G_ENERGY@
 	      <DESC> Name (or absolute path) of the g_energy binary</DESC>
 	      </bin>
 	      <opts>
@@ -143,7 +143,7 @@
 	      <DESC>GMXRC to source at the startup</DESC>
       </gmxrc>
       <grompp>
-	      <bin>grompp
+	      <bin>@GROMPP@
 	      <DESC> Name (or absolute path) of the grompp binary</DESC>
 	      </bin>
 	      <opts>
@@ -163,7 +163,7 @@
 	      <checkpoint>state.cpt
 	      <DESC>Name of the checkpint to use in case of restarted simulation</DESC>
 	      </checkpoint>
-	      <command>mdrun
+	      <command>@MDRUN@
 	      <DESC>Command to run mdrun (name or absolute path or mpirun mdrun..)</DESC>
 	      </command>
 	      <opts>
