cmake: clean up, drop support for gmx-4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,12 +79,7 @@ include_directories(${VOTCA_TOOLS_INCLUDE_DIRS})
 
 option(WITH_GMX "Build gromacs reader/writer, disabling leads to reduced functionality!" ON)
 if (WITH_GMX)
-  foreach(LIBGMX libgmx_d libgmx libgromacs_d libgromacs)
-    find_package(GROMACS COMPONENTS "${LIBGMX}")
-    if (GROMACS_FOUND)
-      break()
-    endif(GROMACS_FOUND)
-  endforeach(LIBGMX)
+  find_package(GROMACS REQUIRED)
 endif(WITH_GMX) 
 
 ########################################################################
