.travis.yml: add another cmake workaround

--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ before_script:
   - ln -s /usr/bin/ccache "$HOME/bin/clang"
 # download newer cmake for gmx
   - wget -qO- http://www.cmake.org/files/v${CMAKE_VERSION:0:3}/cmake-${CMAKE_VERSION}.tar.gz | tar -xvz
-  - ln -vs $PWD/${CMAKE_VERSION}/bin/cmake "$HOME/bin/cmake"
+  - ln -vs $PWD/cmake-${CMAKE_VERSION}/bin/cmake "$HOME/bin/cmake"
 
 script:
   - PATH="$HOME/bin:/usr/lib/ccache:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
