--- a/include/votca/ctp/votca_ctp_config.h.in
+++ b/include/votca/ctp/votca_ctp_config.h.in
@@ -2,10 +2,8 @@
 #define _VOTCA_CTP_CONFIG_H
 
 /* OpenMP */
-#cmakedefine OMP
-#if defined(OMP)
+#ifdef _OPENMP
    #include <omp.h>
-   #define OMP
 #endif
 
 /* LIBXC */
