--- a/scripts/ctp_basisset.in
+++ b/scripts/ctp_basisset.in
@@ -81,6 +81,12 @@ if OPTIONS.outputvotca == '':
 # PARSING NWCHEM FILE
 # =============================================================================
 
+def getelemententry(root,element):
+    for e in root:
+        if e.get("element")==element:
+            return e
+    return lxml.Subelement(root,"element",name=entries[0])
+types=["S","P","D","F","G"]
 elements=['H', 'He', 'Li', 'Be', 'B', 'C', 'N', 'O', 'F', 'Ne', 'Na', 'Mg', 'Al', 'Si', 'P', 'S', 'Cl', 'K', 'Ar', 'Ca', 'Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Ni', 'Co', 'Cu', 'Zn', 'Ga', 'Ge', 'As', 'Se', 'Br', 'Kr', 'Rb', 'Sr', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'In', 'Sn', 'Sb', 'I', 'Te', 'Xe', 'Cs', 'Ba', 'La', 'Ce', 'Pr', 'Nd', 'Pm', 'Sm', 'Eu', 'Gd', 'Tb', 'Dy', 'Ho', 'Er', 'Tm', 'Yb', 'Lu', 'Hf', 'Ta', 'W', 'Re', 'Os', 'Pt', 'Ir', 'Au', 'Hg', 'Tl', 'Pb', 'Bi', 'Po', 'At', 'Rn', 'Fr', 'Ra', 'Ac', 'Pa', 'Th', 'Np', 'U', 'Am', 'Pu', 'Bk', 'Cm', 'Cf', 'Es', 'Fm', 'Md', 'No', 'Rf', 'Lr', 'Db', 'Bh', 'Sg', 'Mt', 'Ds', 'Rg', 'Hs', 'Uut', 'Uub', 'Uup', 'Uuq', 'Uuh', 'Uuo']
 keywords=["BASIS","end","basis"]
 basissetname=os.splitext(os.basename(outputvotca))[0]
@@ -90,11 +96,23 @@ with open(OPTIONS.nwchem,'r') as f:
     for line in f.readlines():
         if line[0]=="#":
             continue
+	    elif line in ["\n","\r\n"]:
+            element=None
+	        continue
         entries=line.split()
-        if entries[0] in keywords:
+        elif entries[0] in keywords:
+            element=None
             continue
-        if entries[0] in elements:
-           
+        elif entries[0] in elements:
+            element=getelemententry(basis,entries[0])
+            shell=lxml.Subelement(element,"shell",type=entries[1])
+        elif len(entries)>1 and shell!=None:
+            constant=lxml.Subelement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
+            for i in range(len(entries[1:])):
+                 lxml.Subelement(constant,"contraction",type=types[i],factor="{:1.6e}".format(float(entries[i+1])))
+        else:
+           okquit("\nCannot understand line in file:{}".format(line)) 
+            
             
             
         
