--- a/scripts/ctp_basisset.in
+++ b/scripts/ctp_basisset.in
@@ -73,7 +73,7 @@ OPTIONS = progargs.parse_args()
 if OPTIONS.nwchem == '':
 	progargs.print_help()
 	okquit("\nQuit here, because: Inputfile not set (option -f/--inputnw)")
-if OPTIONS.outputvotca == '':
+if OPTIONS.outputfile == '':
 	progargs.print_help()
 	okquit("\nQuit here, because: outputfile not set (option -o/--outputvotca)")
 
@@ -83,40 +83,41 @@ if OPTIONS.outputvotca == '':
 
 def getelemententry(root,element):
     for e in root:
-        if e.get("element")==element:
+	print e.get("name")
+        if e.get("name")==element:
             return e
-    return lxml.Subelement(root,"element",name=entries[0])
+    return lxml.SubElement(root,"element",name=entries[0])
 types=["S","P","D","F","G"]
 elements=['H', 'He', 'Li', 'Be', 'B', 'C', 'N', 'O', 'F', 'Ne', 'Na', 'Mg', 'Al', 'Si', 'P', 'S', 'Cl', 'K', 'Ar', 'Ca', 'Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Ni', 'Co', 'Cu', 'Zn', 'Ga', 'Ge', 'As', 'Se', 'Br', 'Kr', 'Rb', 'Sr', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'In', 'Sn', 'Sb', 'I', 'Te', 'Xe', 'Cs', 'Ba', 'La', 'Ce', 'Pr', 'Nd', 'Pm', 'Sm', 'Eu', 'Gd', 'Tb', 'Dy', 'Ho', 'Er', 'Tm', 'Yb', 'Lu', 'Hf', 'Ta', 'W', 'Re', 'Os', 'Pt', 'Ir', 'Au', 'Hg', 'Tl', 'Pb', 'Bi', 'Po', 'At', 'Rn', 'Fr', 'Ra', 'Ac', 'Pa', 'Th', 'Np', 'U', 'Am', 'Pu', 'Bk', 'Cm', 'Cf', 'Es', 'Fm', 'Md', 'No', 'Rf', 'Lr', 'Db', 'Bh', 'Sg', 'Mt', 'Ds', 'Rg', 'Hs', 'Uut', 'Uub', 'Uup', 'Uuq', 'Uuh', 'Uuo']
 keywords=["BASIS","end","basis"]
-basissetname=os.splitext(os.basename(outputvotca))[0]
+basissetname=os.path.splitext(os.path.basename(OPTIONS.outputfile))[0]
 basis = lxml.Element("basis",name=basissetname)
-basis.append(lxml.comment("Basis set created by ctp_basisset from {} at {}".format(os.basename(OPTIONS.nwchem),time.strftime("%c"))    
+basis.append(lxml.Comment("Basis set created by ctp_basisset from {} at {}".format(os.path.basename(OPTIONS.nwchem),time.strftime("%c"))))    
 with open(OPTIONS.nwchem,'r') as f:
     for line in f.readlines():
         if line[0]=="#":
             continue
-	    elif line in ["\n","\r\n"]:
+        elif line in ["\n","\r\n"]:
             element=None
-	        continue
+	    continue
         entries=line.split()
-        elif entries[0] in keywords:
+        if entries[0] in keywords:
             element=None
             continue
         elif entries[0] in elements:
             element=getelemententry(basis,entries[0])
-            shell=lxml.Subelement(element,"shell",type=entries[1])
+            shell=lxml.SubElement(element,"shell",type=entries[1],scale="1.0")
         elif len(entries)>1 and shell!=None:
-            constant=lxml.Subelement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
+            constant=lxml.SubElement(shell,"constant",decay="{:1.6e}".format(float(entries[0])))
             for i in range(len(entries[1:])):
-                 lxml.Subelement(constant,"contraction",type=types[i],factor="{:1.6e}".format(float(entries[i+1])))
+                 lxml.SubElement(constant,"contraction",type=types[i],factor="{:1.6e}".format(float(entries[i+1])))
         else:
            okquit("\nCannot understand line in file:{}".format(line)) 
             
             
-            
+print "Imported  new basisset {} from {} written to file {} with ctp_basisset".format(basissetname,OPTIONS.nwchem,OPTIONS.outputfile)
         
-with open(outputfile, 'w') as f:
+with open(OPTIONS.outputfile, 'w') as f:
             f.write(lxml.tostring(basis, pretty_print=True))
 
 sys.exit(0)
