--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,11 @@ env:
     - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
 
+matrix:
+  allow_failures:
+    - compiler: clang
+      env: WALL=yes GMX_VERSION=9999 J=4
+
 before_script:
   - rm -vrf * .git
   - wget https://raw.githubusercontent.com/votca/buildutil/master/build.sh && chmod 755 build.sh
