--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,11 @@ env:
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
+    - WALL=yes GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=5.1 J=4
+    - WALL=yes GMX_VERSION=5.1 GMX_DOUBLE=yes J=4
     - WALL=yes GMX_VERSION=9999 J=4
+    - WALL=yes GMX_VERSION=9999 GMX_DOUBLE=yes J=4
     - J=1
     - BDIR=build J=4
     - BDIR=build J=1
@@ -73,6 +76,8 @@ matrix:
   allow_failures:
     - compiler: clang
       env: WALL=yes GMX_VERSION=9999 J=4
+    - compiler: clang
+      env: WALL=yes GMX_VERSION=9999 GMX_DOUBLE=yes J=4
 
 before_script:
   - rm -vrf * .git
@@ -91,7 +96,7 @@ script:
   - PATH="$HOME/bin:$HOME/hdf5:/usr/lib/ccache:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
     ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal}
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
-    --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF
+    --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:-DGMX_DOUBLE=yes}
     tools $([[ ${MINIMAL} ]] || echo gromacs) csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
     ${CTP:+kmc moo ctp}
 
