--- a/.travis.yml
+++ b/.travis.yml
@@ -42,30 +42,10 @@ env:
     - BDIR=build J=1
     - MAN=yes J=4
     - MINIMAL=yes J=4
-    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi_bonded J=4
-    - CSG_MDRUN_STEPS=500 TEST=hexane/ibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol/ibi J=4
-    - CSG_MDRUN_STEPS=10000 TEST=methanol/imc J=4
-    - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.938/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.938/simplex J=4
-    - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.062/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.062/simplex J=4
-    - CSG_MDRUN_STEPS=5000 TEST=methanol-water/X_0.5/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=methanol-water/X_0.5/simplex J=4
-    - CSG_MDRUN_STEPS=500 TEST=propane/ibi J=4
-    - CSG_MDRUN_STEPS=10000 TEST=propane/imc J=4
     - CSG_MDRUN_STEPS=500 TEST=spce/cma/density J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/cma/simple J=4
     - CSG_MDRUN_STEPS=500 TEST=spce/ibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/ibi_pressure J=4
     - CSG_MDRUN_STEPS=10000 TEST=spce/imc J=4
-    - CSG_MDRUN_STEPS=10000 TEST=spce/realtime J=4
     - CSG_MDRUN_STEPS=5000 TEST=spce/re J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/simplex/density J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/simplex/pressure J=4
-    - CSG_MDRUN_STEPS=500 TEST=spce/simplex/simple J=4
-    - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
-    - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
 
 before_script:
   - rm -vrf * .git
@@ -95,3 +75,7 @@ cache:
 compiler:
   - clang
   - gcc
+
+notifications:
+  email:
+    - votca-commits@googlegroups.com
