--- a/src/libkmc/CMakeLists.txt
+++ b/src/libkmc/CMakeLists.txt
@@ -13,10 +13,10 @@ file(GLOB_RECURSE VOTCA_SOURCES *.cc)
 file(GLOB_RECURSE NOT_VOTCA_SOURCES version_nb.cc)
 list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 
-add_library(votca_kmc  ${VOTCA_SOURCES})
-add_dependencies(votca_kmc hgversion)
-target_link_libraries(votca_kmc ${VOTCA_TOOLS_LIBRARIES})
-install(TARGETS votca_kmc LIBRARY DESTINATION ${LIB} ARCHIVE DESTINATION ${LIB})
+add_library(votca_xtp_kmc  ${VOTCA_SOURCES})
+add_dependencies(votca_xtp_kmc hgversion)
+target_link_libraries(votca_xtp_kmc ${VOTCA_TOOLS_LIBRARIES})
+install(TARGETS votca_xtp_kmc LIBRARY DESTINATION ${LIB} ARCHIVE DESTINATION ${LIB})
 
-configure_file(libvotca_kmc.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_kmc.pc @ONLY)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_kmc.pc DESTINATION ${LIB}/pkgconfig)
+configure_file(libvotca_xtp_kmc.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_xtp_kmc.pc @ONLY)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_xtp_kmc.pc DESTINATION ${LIB}/pkgconfig)
