--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall}
     --directory "$HOME/votca/src" --no-clean --depth 1
     tools gromacs csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
-    ${XTP:+kmc moo xtp}
+    ${XTP:+moo xtp}
 
 cache:
   directories:
