--- a/src/libmoo/libvotca_xtp_moo.pc.in
+++ b/src/libmoo/libvotca_xtp_moo.pc.in
@@ -2,11 +2,11 @@ prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/@LIB@
 includedir=${prefix}/include
 
-Name: libvotca_moo
+Name: libvotca_xtp_moo
 Description: moo functions of the votca package
 URL: http://www.votca.org
 Version: @VERSION@
 Requires: libvotca_tools
-Libs: -L${libdir} -lvotca_moo
+Libs: -L${libdir} -lvotca_xtp_moo
 Libs.private: -lm
 Cflags: -I${includedir}
