--- a/src/moo_overlap/CMakeLists.txt
+++ b/src/moo_overlap/CMakeLists.txt
@@ -1,6 +1,7 @@
 foreach(PROG moo_overlap)
   file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
   add_executable(${PROG} ${${PROG}_SOURCES})
-  target_link_libraries(${PROG} votca_moo ${BOOST_LIBRARIES})
+  set_target_properties(${PROG} PROPERTIES OUTPUT_NAME xtp_${PROG})
+  target_link_libraries(${PROG} votca_xtp_moo ${BOOST_LIBRARIES})
   install(TARGETS ${PROG} RUNTIME DESTINATION bin)
 endforeach(PROG)
