--- a/src/moo_overlap/CMakeLists.txt
+++ b/src/moo_overlap/CMakeLists.txt
@@ -2,6 +2,6 @@ foreach(PROG moo_overlap)
   file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
   add_executable(${PROG} ${${PROG}_SOURCES})
   set_target_properties(${PROG} PROPERTIES OUTPUT_NAME xtp_${PROG})
-  target_link_libraries(${PROG} votca_xtp_moo ${BOOST_LIBRARIES})
+  target_link_libraries(${PROG} votca_xtp ${BOOST_LIBRARIES})
   install(TARGETS ${PROG} RUNTIME DESTINATION bin)
 endforeach(PROG)
