--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ env:
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
+    - XTP=yes WERROR=yes J=4
+    - XTP=yes WALL=yes J=4
     - J=1
     - BDIR=build J=4
     - BDIR=build J=1
@@ -66,7 +68,7 @@ script:
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall}
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF
     tools gromacs csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
-    ${CTP:+kmc moo ctp}
+    ${CTP:+kmc moo ctp} ${XTP:+xtp}
 
 cache:
   directories:
