--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,7 @@ before_script:
   - ln -vs $PWD/cmake-${CMAKE_VERSION}/bin/cmake "$HOME/bin/cmake"
   - wget -qO- https://www.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
     cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..
+  - if [[ ${MAN} ]]; then git clone https://github.com/votca/doxygen.git "$HOME/votca/src/devdoc"; fi 
 
 script:
   - PATH="$HOME/bin:$HOME/hdf5:/usr/lib/ccache:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
@@ -101,6 +102,21 @@ script:
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
     tools $([[ ${MINIMAL} ]] || echo gromacs) csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
     ${CTP:+kmc moo ctp} ${XTP:+xtp}
+
+after_success:
+  - if [[ ${MAN} && ${CC} = gcc ]]; then
+      cd "$HOME/votca/src/devdoc"
+      if [[ ${TRAVIS_BRANCH} = master && ${encrypted_3780e1dc437f_key} && ${encrypted_3780e1dc437f_iv} && ${TRAVIS_PULL_REQUEST} == false ]]; then
+        git config --global user.name "Automatic Deployment (Travis CI)";
+        git config --global user.email "votca-commits@googlegroups.com";
+        git add --all && git commit -m "Documentation Update";
+        openssl aes-256-cbc -K $encrypted_3780e1dc437f_key -iv $encrypted_3780e1dc437f_iv -in deploy.enc -out ~/.ssh/id_rsa -d;
+        chmod 600 ~/.ssh/id_rsa;
+        git push git@github.com:votca/doxygen.git gh-pages;
+      else
+        git diff --no-color;
+      fi;
+    fi
 
 cache:
   directories:
