--- a/share/doc/Doxyfile.in
+++ b/share/doc/Doxyfile.in
@@ -609,6 +609,7 @@ EXCLUDE_SYMLINKS       = NO
 
 EXCLUDE_PATTERNS       = */.git/* 
 EXCLUDE_PATTERNS      += */CMakeFiles/* 
+EXCLUDE_PATTERNS      += */CMakeModules/* 
 EXCLUDE_PATTERNS      += *.py
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names 
