--- a/share/xml/csg_defaults.xml.in
+++ b/share/xml/csg_defaults.xml.in
@@ -519,6 +519,9 @@
 	      <group>
 	        <DESC>Group of interaction. Cross-correlations of all members of a group are taken into account for calculating the update. If no cross correlations should be calculated, interactions have to be put into different groups.</DESC>
 	      </group>
+              <reg>0
+                <DESC> magnitude for regularization parameter, default =0</DESC>
+	      </reg>
       </imc>
       <lammps>
 	      <DESC>lammps specific options for this interations</DESC>
