--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,7 @@ env:
     - CSG_MDRUN_STEPS=500 TEST=spce/simplex/simple J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/ibi J=4
     - CSG_MDRUN_STEPS=500 TEST=urea-water/kb-ibi J=4
+    - CSG_MDRUN_STEPS=500 TEST=He-Ar/imc J=4
 
 matrix:
   allow_failures:
