added double for gwbse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,14 @@ endif()
 ########################################################################
 
 
+if(GWBSE_DOUBLE)
+    add_definitions(-DGWBSE_DOUBLE)
+    set(GWBSE_DOUBLE_VALUE 1)
+else()
+    set(GWBSE_DOUBLE_VALUE 0)
+endif()
+add_definitions(-DGWBSE_DOUBLE=${GWBSE_DOUBLE_VALUE})
+
 find_package(LIBXC)
 if (LIBXC_FOUND)
 	include_directories(${LIBXC_INCLUDE_DIRS})
