cmake: add feature summary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,3 +131,6 @@ if(NOT TARGET uninstall)
   add_custom_target(uninstall)
 endif()
 add_dependencies(uninstall uninstall-csg)
+
+include(FeatureSummary)
+feature_summary(INCLUDE_QUIET_PACKAGES WHAT ALL)
