--- a/manual/reference/programs/Makefile.BINS
+++ b/manual/reference/programs/Makefile.BINS
@@ -1,7 +1,6 @@
 SHELL=/bin/bash
 BINS1:=$(shell ls `dirname \`which xtp_run\``/xtp_* | xargs -n1 basename ) 
-BINS2:=$(shell ls `dirname \`which xtp_kmc_run\``/kmc_* | xargs -n1 basename )
-BINS3:=$(shell ls `dirname \`which xtp_overlap\``/xtp_* | xargs -n1 basename )
+BINS2:=$(shell ls `dirname \`which xtp_kmc_run\``/xtp_kmc* | xargs -n1 basename )
 
 all: Makefile.incl
 
@@ -13,9 +12,9 @@ Makefile.incl: dummy
 	  echo csg_call not found;\
 	  exit 1;\
 	fi
-	echo $(BINS1) $(BINS2) $(BINS3) | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.t2t\\/' -e '1i BINST2T=\\' > $@
+	echo $(BINS1) $(BINS2)  | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.t2t\\/' -e '1i BINST2T=\\' > $@
 	echo >> $@
-	echo $(BINS1) $(BINS2) $(BINS3) | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.tex\\/' -e '1i BINSTEX=\\' >> $@
+	echo $(BINS1) $(BINS2)  | sed 's/[[:space:]]\+/\n/g' | sed -e 's/.*/\t&.tex\\/' -e '1i BINSTEX=\\' >> $@
 	echo >> $@
 	@#just added to avoid clock screw
 	sleep 0.5
